# pvpccheap2

./: API_ANDROID.md  Cargo.toml  OAUTH_SETUP.md  QUICK_FIX.md  README.md  env.example  test.html
migrations/2024-01-01-000001_create_initial_tables/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: auth.rs  device.rs  health.rs  mobile.rs  mod.rs  rule.rs  schedule.rs  websocket.rs
src/middleware/: auth.rs
src/models/: command.rs  device.rs  mod.rs  rule.rs  schedule.rs  user.rs
src/services/: mod.rs
src/utils/: mod.rs
